Switch from StrangeCase to Jekyll.

--- a/site/_posts/2012-04-24-bashrc.virtualenvwrapper.md
+++ b/site/_posts/2012-04-24-bashrc.virtualenvwrapper.md
@@ -6,11 +6,9 @@ slug: dynamic-virtualenvwrapper
 author: Aron
 tags: [python, virtualenv, virtualenvwrapper, bash, bashrc, workon]
 excerpt: Loading virtualenvwrapper.sh adds a second every time you launch a shell. Get that second back!
-status: published
+layout: article
 ---
-{% extends 'layouts/article.html' %}
 
-{% block article %}{% markdown %}
 **UPDATE 2012-06-01**: [Doug released virtualenvwrapper 3.4 with
 built-in support for lazy loading](http://virtualenvwrapper.readthedocs.org/en/latest/install.html#install-lazy-loader).
 It's a lot better than the hack in this post! 
@@ -85,4 +83,3 @@ Then replace `source virtualenvwrapper.sh` in your .bashrc with:
 
 This loads in about 1/100 of a second, and the real `virtualenvwrapper.sh`
 will load when you first invoke `workon` or `mkvirtualenv`.
-{% endmarkdown %}{% endblock %}
