--- a/site/_posts/2013-03-25-bashes.md
+++ b/site/_posts/2013-03-25-bashes.md
@@ -5,11 +5,9 @@ slug: bashes
 author: Aron
 tags: [bash, github, travis, ppa]
 excerpt: Test your script against multiple Bash versions using Travis CI.
-status: published
+layout: article
 ---
-{% extends 'layouts/article.html' %}
 
-{% block article %}{% markdown %}
 A few months ago I released two [Bash](http://gnu.org/software/bash)
 libraries for parsing command-line options. One is a pure Bash drop-in
 replacement for [GNU getopt](http://software.frodo.looijaard.name/getopt/)
@@ -126,4 +124,3 @@ So our final and complete `.travis.yml` contains:
     script: bash travis.bash
 
 If you use this to test your scripts, please let me know in the comments!
-{% endmarkdown %}{% endblock %}
