--- a/site/_posts/2013-08-20-pixel.md
+++ b/site/_posts/2013-08-20-pixel.md
@@ -5,11 +5,9 @@ slug: pixel
 author: Aron
 tags: [chromebook, pixel, google, crouton]
 excerpt: Developing on a Chromebook is fine, if your habits match mine.
-status: published
+layout: article
 ---
-{% extends 'layouts/article.html' %}
 
-{% block article %}{% markdown %}
 I'm using the Pixel for daily development in Python/Django, with [crouton](https://github.com/dnschneid/crouton),
 [ssh](https://chrome.google.com/webstore/detail/secure-shell/pnhechapfaindjhompbnflcldabbghjo?hl=en) to localhost,
 [mosh](http://mosh.mit.edu) to home server, and [tmux](http://tmux.sourceforge.net) FTW.
@@ -113,4 +111,3 @@ I also install synergy in the chroot, so that I can control my Pixel from
 my desktop keyboard and mouse whenever I'm on the LAN:
 
     enter-chroot -b host-x11 synergyc --no-daemon --name jasperodus gargan
-{% endmarkdown %}{% endblock %}
