--- a/site/_drafts/2013-01-21-mythtv-0.25-on-fedora-18.md
+++ b/site/_drafts/2013-01-21-mythtv-0.25-on-fedora-18.md
@@ -4,14 +4,11 @@ title: ...
 slug: ...
 author: Aron
 tags: [java, fedora, security]
-status: draft
+layout: article
 ---
-{% extends 'layouts/article.html' %}
 
-{% block article %}{% markdown %}
     yum install yum-plugin-versionlock
     yum versionlock $(rpm -qa | grep mythtv)
 
     http://code.mythtv.org/trac/ticket/11159
     https://ffmpeg.org/trac/ffmpeg/ticket/2050
-{% endmarkdown %}{% endblock %}
