Use jekyll-redirect-from for old blog urls

--- a/site/_posts/2012-04-24-bashrc.virtualenvwrapper.md
+++ b/site/_posts/2012-04-24-bashrc.virtualenvwrapper.md
@@ -7,6 +7,8 @@ author: Aron
 tags: [python, virtualenv, virtualenvwrapper, bash, bashrc, workon]
 excerpt: Loading virtualenvwrapper.sh adds a second every time you launch a shell. Get that second back!
 layout: article
+redirect_from:
+  - /blog/articles/2012-04-24-dynamic-virtualenvwrapper.html
 ---
 
 **UPDATE 2012-06-01**: [Doug released virtualenvwrapper 3.4 with
