--- a/site/_posts/2013-03-25-bashes.md
+++ b/site/_posts/2013-03-25-bashes.md
@@ -6,6 +6,8 @@ author: Aron
 tags: [bash, github, travis, ppa]
 excerpt: Test your script against multiple Bash versions using Travis CI.
 layout: article
+redirect_from:
+  - /blog/articles/2013-03-25-bashes.html
 ---
 
 A few months ago I released two [Bash](http://gnu.org/software/bash)
