--- a/site/_posts/2013-08-20-pixel.md
+++ b/site/_posts/2013-08-20-pixel.md
@@ -6,6 +6,8 @@ author: Aron
 tags: [chromebook, pixel, google, crouton]
 excerpt: Developing on a Chromebook is fine, if your habits match mine.
 layout: article
+redirect_from:
+  - /blog/articles/2013-08-20-pixel.html
 ---
 
 I'm using the Pixel for daily development in Python/Django, with [crouton](https://github.com/dnschneid/crouton),
