--- a/src/content/posts/2021-12-01-advent-of-code.mdx
+++ b/src/content/posts/2021-12-01-advent-of-code.mdx
@@ -4,6 +4,7 @@ tags: [advent-of-code, javascript]
 excerpt: Sonar Sweep
 index: false
 ---
+import Advent from '../../components/Advent.astro'
 
 > As the submarine drops below the surface of the ocean, it automatically
 > performs a sonar sweep of the nearby sea floor. On a small screen, the sonar
