--- a/src/content/posts/2021-12-02-advent-of-code.mdx
+++ b/src/content/posts/2021-12-02-advent-of-code.mdx
@@ -4,6 +4,7 @@ tags: [advent-of-code, javascript]
 excerpt: Dive!
 index: false
 ---
+import Advent from '../../components/Advent.astro'
 
 > Now, you need to figure out how to pilot this thing.
 
