--- a/src/content/posts/2021-12-04-advent-of-code.mdx
+++ b/src/content/posts/2021-12-04-advent-of-code.mdx
@@ -4,6 +4,7 @@ tags: [advent-of-code, javascript]
 excerpt: Giant Squid
 index: false
 ---
+import Advent from '../../components/Advent.astro'
 
 > Maybe it wants to play bingo?
 
