--- a/src/content/posts/2021-12-05-advent-of-code.mdx
+++ b/src/content/posts/2021-12-05-advent-of-code.mdx
@@ -4,6 +4,7 @@ tags: [advent-of-code, javascript]
 excerpt: Hydrothermal Venture
 index: false
 ---
+import Advent from '../../components/Advent.astro'
 
 I spent _hours_ on day 5 building complex things that didn't work. That left me
 in a mood to hack and golf more, idealize less.
