--- a/src/content/posts/2021-12-06-advent-of-code.mdx
+++ b/src/content/posts/2021-12-06-advent-of-code.mdx
@@ -4,6 +4,7 @@ tags: [advent-of-code, javascript]
 excerpt: Lanternfish
 index: false
 ---
+import Advent from '../../components/Advent.astro'
 
 > A massive school of glowing lanternfish swims past. They must spawn quickly to
 > reach such large numbers - maybe exponentially quickly? You should model their
