--- a/src/content/posts/2021-12-10-advent-of-code.mdx
+++ b/src/content/posts/2021-12-10-advent-of-code.mdx
@@ -4,6 +4,7 @@ tags: [advent-of-code, javascript]
 excerpt: Syntax Scoring
 index: false
 ---
+import Advent from '../../components/Advent.astro'
 
 > Syntax error in navigation subsystem on line: all of them
 
