--- a/src/content/posts/2021-12-11-advent-of-code.mdx
+++ b/src/content/posts/2021-12-11-advent-of-code.mdx
@@ -4,6 +4,7 @@ tags: [advent-of-code, javascript]
 excerpt: Dumbo Octopus
 index: false
 ---
+import Advent from '../../components/Advent.astro'
 
 > There are 100 octopuses arranged neatly in a 10 by 10 grid. Each octopus
 > slowly gains energy over time and flashes brightly for a moment when its
