--- a/src/content/posts/2021-12-12-advent-of-code.mdx
+++ b/src/content/posts/2021-12-12-advent-of-code.mdx
@@ -4,6 +4,7 @@ tags: [advent-of-code, javascript]
 excerpt: Passage Pathing
 index: false
 ---
+import Advent from '../../components/Advent.astro'
 
 > With your submarine's subterranean subsystems subsisting suboptimally, the
 > only way you're getting out of this cave anytime soon is by finding a path
