--- a/src/content/posts/2021-12-13-advent-of-code.mdx
+++ b/src/content/posts/2021-12-13-advent-of-code.mdx
@@ -4,6 +4,7 @@ tags: [advent-of-code, javascript]
 excerpt: Transparent Origami
 index: false
 ---
+import Advent from '../../components/Advent.astro'
 
 > Congratulations on your purchase!
 
