--- a/src/content/posts/2021-12-15-advent-of-code.mdx
+++ b/src/content/posts/2021-12-15-advent-of-code.mdx
@@ -4,6 +4,7 @@ tags: [advent-of-code, javascript]
 excerpt: Chiton
 index: false
 ---
+import Advent from '../../components/Advent.astro'
 
 > You've almost reached the exit of the cave, but the walls are getting closer
 > together. Your submarine can barely still fit, though; the main problem is
