--- a/src/content/posts/2021-12-03-advent-of-code.mdx
+++ b/src/content/posts/2021-12-03-advent-of-code.mdx
@@ -4,6 +4,7 @@ tags: [advent-of-code, javascript]
 excerpt: Binary Diagnostic
 index: false
 ---
+import Advent from '../../components/Advent.astro'
 
 > The submarine has been making some odd creaking noises, so you ask it to
 > produce a diagnostic report just in case.
