--- a/src/content/posts/2021-12-07-advent-of-code.mdx
+++ b/src/content/posts/2021-12-07-advent-of-code.mdx
@@ -4,6 +4,7 @@ tags: [advent-of-code, javascript]
 excerpt: The Treachery of Whales
 index: false
 ---
+import Advent from '../../components/Advent.astro'
 
 > A giant whale has decided your submarine is its next meal, and it's much
 > faster than you are. There's nowhere to run!
