--- a/src/content/posts/2021-12-08-advent-of-code.mdx
+++ b/src/content/posts/2021-12-08-advent-of-code.mdx
@@ -4,6 +4,7 @@ tags: [advent-of-code, javascript]
 excerpt: Seven Segment Search
 index: false
 ---
+import Advent from '../../components/Advent.astro'
 
 > You barely reach the safety of the cave when the whale smashes into the cave
 > mouth, collapsing it. Sensors indicate another exit to this cave at a much
