--- a/src/content/posts/2021-12-09-advent-of-code.mdx
+++ b/src/content/posts/2021-12-09-advent-of-code.mdx
@@ -4,6 +4,7 @@ tags: [advent-of-code, javascript]
 excerpt: Smoke Basin
 index: false
 ---
+import Advent from '../../components/Advent.astro'
 
 > If you can model how the smoke flows through the caves, you might be able to
 > avoid it and be that much safer. The submarine generates a heightmap of the
