--- a/src/content/posts/2023-11-18-bash-main.mdx
+++ b/src/content/posts/2023-11-18-bash-main.mdx
@@ -88,6 +88,8 @@ install() {
 main "$@"
 ```
 
+Seriously, though, maybe switch to Python?
+
 ---
 
 <a href="#ref1" id="foot1">[1]</a> Technically, the granularity is compound
