add ref to wayback n01se blog

--- a/src/content/posts/2012-04-24-bashrc.virtualenvwrapper.mdx
+++ b/src/content/posts/2012-04-24-bashrc.virtualenvwrapper.mdx
@@ -84,3 +84,5 @@ source ~/.bashrc.virtualenvwrapper
 
 This loads in about 1/100 of a second, and the real `virtualenvwrapper.sh`
 will load when you first invoke `workon` or `mkvirtualenv`.
+
+> Originally posted on the [n01se blog](https://web.archive.org/web/20200209140807/http://blog.n01se.net/agriffis-n01se-net-blog-dynamic-virtualenvwrapper-.html)
