wayback n01se blog links

--- a/src/content/posts/2010-04-20-daemonizing-bash.mdx
+++ b/src/content/posts/2010-04-20-daemonizing-bash.mdx
@@ -1,7 +1,7 @@
 ---
 title: Daemonizing Bash
 excerpt: What were you thinking, anyway?
-tags: [bash]
+tags: [bash, n01se]
 ---
 
 Before we jump into this, let's be clear about intent: There are better
