--- a/src/content/posts/2010-07-04-python-httplib-hurts.mdx
+++ b/src/content/posts/2010-07-04-python-httplib-hurts.mdx
@@ -46,4 +46,4 @@ of httplib2 seems to imply that (and also seems to imply that it's hard to
 get problems fixed in the core distribution). Maybe I need to find an
 add-on networking library that ignores httplib entirely...?
 
-(originally posted on the [n01se blog](http://blog.n01se.net/blog-n01se-net-p-213.html))
+> Originally posted on the [n01se blog](https://web.archive.org/web/20200803113306/http://blog.n01se.net/blog-n01se-net-p-213.html)
