--- a/src/content/posts/2010-08-29-python-httplib-debug.mdx
+++ b/src/content/posts/2010-08-29-python-httplib-debug.mdx
@@ -93,5 +93,4 @@ hold the captured trace) and middleware that knows to look for it. The end
 result is that every time an exception occurs due to a problem talking to
 a backend server, the exception email includes the httplib2 trace. Yeah!
 
-(originally posted on the [n01se blog](http://blog.n01se.net/blog-n01se-net-p-218.html))
-
+> Originally posted on the [n01se blog](https://web.archive.org/web/20170703160516/http://blog.n01se.net/blog-n01se-net-p-218.html)
