--- a/src/content/posts/2012-04-24-bashrc.virtualenvwrapper.mdx
+++ b/src/content/posts/2012-04-24-bashrc.virtualenvwrapper.mdx
@@ -1,7 +1,7 @@
 ---
 title: Load virtualenvwrapper on demand
 updated: '2012-06-01'
-tags: [python, virtualenv, virtualenvwrapper, bash, bashrc, workon]
+tags: [python, virtualenv, virtualenvwrapper, bash, bashrc, workon, n01se]
 excerpt: Loading virtualenvwrapper.sh adds a second every time you launch a shell. Get that second back!
 slug: bashrc.virtualenvwrapper
 ---
