revamp daemonizing bash

--- a/src/content/posts/2010-04-20-daemonizing-bash.mdx
+++ b/src/content/posts/2010-04-20-daemonizing-bash.mdx
@@ -5,82 +5,124 @@ tags: [bash, n01se]
 n01se: https://web.archive.org/web/20210121181407/http://blog.n01se.net/blog-n01se-net-p-145.html
 ---
 
-Before we jump into this, let's be clear about intent: There are better
-languages for writing daemons than bash. Honestly, any other language is
-probably a better choice. Writing a daemon implies that you're writing
-a sufficiently complex program that bash is already the wrong language, with or
-without daemonization!
+A daemon is a program that runs in the background. It sounds simple, but
+becoming a proper daemon requires disconnecting from the controlling terminal,
+protecting against signals, and closing file descriptors.
 
-But if you find yourself in the unfortunate position of needing to daemonize an
-existing bash program, and you'd rather put off rewriting it in a more suitable
-language, keep reading! I found myself in that position recently and kept some
-notes.
+This post explores how to do that in pure Bash.
 
-Daemonizing a process consists of two primary tasks: forking to the background
-to return control to the shell, and preventing undesirable interaction between
-the process and the host. Rich Stevens enumerated the steps in his classic
-Advanced Programming in the UNIX Environment. Here's my summary of his formula
-with implementation notes for bash.
+## It's a bad idea
 
-1. _Call fork (to guarantee the child is not a process group leader, necessary
-   for setsid) and have the parent exit (to allow control to return to the
-   shell)._
+There are better languages for writing daemons than Bash. Almost any other
+language, really. Writing a daemon implies sufficient complexity that your
+program has already outgrown Bash, with or without daemonization.
 
-   Forking in bash is a simple matter of putting a command in the background
-   using `&`. To put a sequence of commands in the background, use a subshell:
-   `( commands ) &`. Note that bash doesn't provide any method for the child
-   process to continue the same execution path as the parent, so the entirety of
-   the child must be contained in the subshell. The easiest way to do this is
-   implement the child as a bash function: `childfunc &`.
+Additionally there are some worthy external tools, for example
+[`daemonize`](http://software.clapper.org/daemonize/) will run a given program
+as a daemon, it's
+[available](https://packages.debian.org/search?keywords=daemonize)
+[in](https://packages.fedoraproject.org/pkgs/daemonize/daemonize/index.html)
+[Linux](https://packages.ubuntu.com/search?keywords=daemonize), and it works
+fine for Bash scripts.
 
-2. _Call setsid to create a new session so the child has no controlling terminal.
-   This simultaneously prevents the child from gaining access to the controlling
-   terminal (using /dev/tty) and protects the child from signals originating
-   from the controlling terminal (HUP and INT, for example)._
+## But that doesn't mean it isn't fun
 
-   Bash provides no method to call the setsid syscall for the current process.
-   We have two less-than-ideal alternatives:
+It was a bad idea to bicycle down that hill with a sweatshirt looped around the
+handlebars. Did that stop you? Of course not. And your bike mostly survived the
+crash, and you eventually regained consciousness, and the parts you can remember
+make a good story, so having learned that lesson, let's carry on.
 
-   1. The util-linux-ng package provides an external setsid command but this
-      daemonizes an external command rather than the currently running script.
-      It also makes collecting the PID of the child tricky because the setsid
-      command will fork internally.
+## Five steps to daemonhood
 
-      Having said all that, if your application allows you to use the setsid
-      command, it's a good choice because bash can't otherwise fully protect
-      against the child process opening /dev/tty. It's still a good idea to
-      redirect std* to prevent stray output to the terminal.
+A program that wants to _daemonize itself_ has two primary tasks: Fork to the
+background to return control to the shell, and prevent undesirable interaction
+between the process and the host. Rich Stevens enumerated the detailed steps in
+his classic [Advanced Programming in the UNIX
+Environment](http://apuebook.com/). Here's my summary of his formula with
+implementation notes for Bash.
 
-   2. Lacking the setsid syscall, there are steps we can take to partially
-      protect the child process from the effects of the controlling terminal:
+### Step 1: Fork process
 
-      1. Redirect std* to files or /dev/null
-      2. Guard against HUP and INT by signal handler in child
-      3. Guard against HUP by disown -h in parent
+> Call fork (to guarantee the child is not a process group leader, necessary for
+> setsid) and have the parent exit (to allow control to return to the shell).
 
-      Unfortunately without setsid there is no way to guard completely against
-      a subchild opening /dev/tty until the terminal emulator exits, then
-      /dev/tty will become unavailable.
+Forking in Bash means putting a command in the background using `&`.
 
-   3. Change working directory to / to prevent the daemon from holding a mounted
-      filesystem open.
+To put a sequence of commands in the background, we can use a subshell `(
+commands ) &` or a shell function:
 
-      Finally, something Bash is really suited for: `cd` 😂
+```bash
+childfunc() {
+  do cool stuff here
+}
 
-   4. Set umask to 0 to clear file mode creation mask.
+# Run the function in a forked process.
+childfunc &
+```
 
-      I have to admit that I can't understand the point of this, in bash or any
-      other language. It seems to me that the child will either set its umask
-      explicitly before creating files, or it will set individual file
-      permissions explicitly, or it will fall back on the caller's umask. In the
-      last case, I want my inherited umask, not the wide-open zero.
+### Step 2: Disconnect terminal
 
-      If anybody wants to explain a good reason for step 4, I'm all ears...
-      Until then, it's commented out in my implementation below.
+> Call setsid to create a new session so the child has no controlling terminal.
+> This simultaneously prevents the child from gaining access to the controlling
+> terminal (using /dev/tty) and protects the child from signals originating
+> from the controlling terminal (HUP and INT, for example).
 
-   5. _Close unneeded file descriptors._
+Bash provides no method to call the setsid syscall for the current process.
+We have two less-than-ideal alternatives:
 
-      This step is fun in bash using eval and brace expansion...
+1. The [util-linux package](https://github.com/util-linux/util-linux) provides
+   an [external setsid command](https://github.com/util-linux/util-linux/blob/master/sys-utils/setsid.c)
+   but this daemonizes an external program rather than the currently running
+   script. It also makes collecting the PID of the child tricky because the
+   setsid command will fork internally.
+
+   Having said all that, if your application allows you to use the setsid
+   command, it's a good choice because Bash can't otherwise fully protect
+   against the child process opening `/dev/tty`. It's still a good idea to
+   redirect std* to prevent stray output to the terminal.
+
+2. Lacking the setsid syscall, there are steps we can take to partially
+   protect the child process from the effects of the controlling terminal:
+
+   1. Redirect std* to files or `/dev/null`
+   2. Guard against HUP and INT by signal handler in child
+   3. Guard against HUP by disown -h in parent
+
+   Unfortunately without setsid there is no way to guard completely against
+   a subchild opening `/dev/tty` until the terminal emulator exits, then
+   `/dev/tty` will become unavailable.
+
+### Step 3: Change directory
+
+> Change working directory to / to prevent the daemon from holding a mounted
+> filesystem open.
+
+Finally, something Bash is really suited for: `cd` 😂
+
+### Step 4: Clear umask
+
+> Set umask to 0 to clear file mode creation mask.
+
+I have to admit that I can't understand the point of this, in Bash or any
+other language. It seems to me that the child will either set its umask
+explicitly before creating files, or it will set individual file
+permissions explicitly, or it will fall back on the caller's umask. In the
+last case, I want my inherited umask, not the wide-open zero.
+
+If anybody wants to explain a good reason for step 4, I'm all ears...
+Until then, it's commented out in my implementation below.
+
+### Step 5: Close files
+
+> Close unneeded file descriptors.
+
+This step is fun in Bash using eval and brace expansion:
+
+```
+eval exec {3..255}\>\&-
+```
+
+## Implementation
 
 With those notes in-hand, here's my implementation. There are two
 functions here, `daemonize` for an external command using setsid,
