update some excerpts

--- a/src/content/posts/2010-07-04-python-httplib-hurts.mdx
+++ b/src/content/posts/2010-07-04-python-httplib-hurts.mdx
@@ -1,7 +1,7 @@
 ---
 title: httplib uses print for debugging
 tags: [python, httplib, n01se]
-excerpt: Oh it hurts...
+excerpt: Oh it hurts
 n01se: https://web.archive.org/web/20200803113306/http://blog.n01se.net/blog-n01se-net-p-213.html
 ---
 
