--- a/src/content/posts/2012-04-24-bashrc.virtualenvwrapper.mdx
+++ b/src/content/posts/2012-04-24-bashrc.virtualenvwrapper.mdx
@@ -2,7 +2,7 @@
 title: Load virtualenvwrapper on demand
 updated: '2012-06-01'
 tags: [python, virtualenv, virtualenvwrapper, bash, bashrc, workon, n01se]
-excerpt: Loading virtualenvwrapper.sh adds a second every time you launch a shell. Get that second back!
+excerpt: Get that second back!
 slug: bashrc.virtualenvwrapper
 n01se: https://web.archive.org/web/20200209140807/http://blog.n01se.net/agriffis-n01se-net-blog-dynamic-virtualenvwrapper-.html
 ---
