--- a/src/content/posts/2013-08-20-pixel.mdx
+++ b/src/content/posts/2013-08-20-pixel.mdx
@@ -2,7 +2,7 @@
 title: Developing on the Chromebook Pixel
 author: Aron
 tags: [chromebook, pixel, google, crouton]
-excerpt: Developing on a Chromebook is fine, if your habits match mine.
+excerpt: Developing on a Chromebook is fine
 ---
 
 I'm using the Pixel for daily development in Python/Django, with [crouton](https://github.com/dnschneid/crouton),
