--- a/src/content/posts/2023-11-18-bash-main.mdx
+++ b/src/content/posts/2023-11-18-bash-main.mdx
@@ -1,7 +1,7 @@
 ---
 title: How to avoid a Bash disaster
 tags: [bash]
-excerpt: The main thing is the main thing.
+excerpt: The main thing is the main thing
 ---
 
 Did you know that Bash scripts run sequentially from disk?<a href="#foot1" id="ref1"><sup>[1]</sup></a>
