--- a/src/content/posts/2013-03-25-bashes.mdx
+++ b/src/content/posts/2013-03-25-bashes.mdx
@@ -1,7 +1,7 @@
 ---
 title: Bashes PPA for testing scripts on Travis CI
 tags: [bash, github, travis, ppa]
-excerpt: Test your script against multiple Bash versions using Travis CI.
+excerpt: Test your script against multiple Bash versions using Travis CI
 ---
 
 A few months ago I released two [Bash](http://gnu.org/software/bash)
